fix(layout): fix layout issues

--- a/src/app/layout.module.scss
+++ b/src/app/layout.module.scss
@@ -15,7 +15,8 @@
 }
 
 .mainWrapper {
-  max-width: 1440px;
+  max-width: 100%;
+  width: 1440px;
   margin: 0 auto;
   padding: 0 30px;
 }
