--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,12 +1,7 @@
-.background {
-  background: linear-gradient(180deg, #f6fbf2 0%, #e2dff6 50.5%, #dfeef6 100%);
-  position: absolute;
-  z-index: -1;
-  width: 110vw;
-  height: 100%;
-  transform: translate(-50%, 0);
-  left: 50%;
-}
+@import '../shared/styles/background.scss';
+
+  @include gradient-background(linear-gradient(180deg, #f6fbf2 0%, #e2dff6 50.5%, #dfeef6 100%));
+
 
 .mainWrapper {
   position: relative;
