--- a/src/features/events/camps/components/card/card.module.scss
+++ b/src/features/events/camps/components/card/card.module.scss
@@ -10,7 +10,7 @@
 }
 
 .card {
-  min-width: 420px;
+  min-width: 100%;
   margin-top: 25px;
   padding: 15px 20px;
   border-radius: 28px;
